--- a/Rollin-Up.css
+++ b/Rollin-Up.css
@@ -115,7 +115,7 @@ html, body
 	padding-left:5px;color:grey;
 }
 #footer{
-	margin-top: 550px;
+	margin-top: 500px;
 	font-family: 'Roboto', sans-serif;
 	font-weight: bold;
 	color: rgb(84, 255, 170);
@@ -130,7 +130,7 @@ html, body
   	transform: translateX(700px);
 }
 #footer1{
-	margin-top: 500px;
+	margin-top: 300px;
 	font-family: 'Roboto', sans-serif;
 	font-weight: bold;
 	color: rgb(84, 255, 170);
@@ -164,4 +164,17 @@ html, body
 .diamondanim:hover{
     height: 150px;
     width: 150px;
+}
+.wasuup{
+	font-family: 'Ubuntu', sans-serif;
+	color: rgb(10, 231, 102);
+	font-size: 30px;
+}
+.footer_image{
+	height: 100px;
+	width: 100px;
+}
+.footer_image1{
+	height: 100px;
+	width: 100px;
 }
